<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/hub"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dashboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spotlight_typewriting"
            android:layout_margin="5dp"
            android:letterSpacing="0.1"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_below="@id/cardview1" />



            <LinearLayout
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_below="@id/dashboardTitle">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_baseline_person_24"
                    android:contentDescription="@string/profile" />

                <TextView
                    android:id="@+id/nameContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/special_elite"
                    android:padding="3dp"
                    android:text="@string/student_name"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="25sp"
                    app:autoSizeTextType="none" />

            </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewStudentDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            android:layout_below="@id/welcomeText"
            android:layout_margin="10dp">


            <RelativeLayout
                android:id="@+id/layoutAfter_CvStudentDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#F5FFFA"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/studentDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/courier_prime_code_italic"
                    android:padding="3dp"
                    android:text="@string/information"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="none" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/studentDetailTitle">

                    <GridLayout
                        android:id="@+id/cVStudentDetailsLinear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:columnCount="2"
                        android:orientation="horizontal"
                        android:rowCount="10">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:fontFamily="@font/courier_prime_code"
                            android:text="@string/name"
                            android:textAlignment="center"
                            android:layout_margin="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentNameEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="255dp"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:elevation="30dp"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/names_s"
                            android:textColor="@color/purple_700"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/age"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentAgeEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:background="@drawable/underline"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/aged"
                            android:textColor="@color/purple_700"
                            android:textSize="20sp" />
                        <!--Address-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="7"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentAddressEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="255dp"
                            android:layout_row="7"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:text="@string/address_s"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                        <!--Hobbies -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="3"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/hobbies"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentHobbiesEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="255dp"
                            android:layout_row="3"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/hobby"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                        <!--COUNTRY-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="4"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/country"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentCountryEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="4"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:text="@string/countries"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                        <!--PARENTS NAME-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="5"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/parent_s"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentParentsEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="5"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:maxWidth="255dp"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/parent_s_name"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                        <!--Phone number-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="6"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/phone_no"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentPhoneEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="6"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:maxWidth="255dp"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/phone_num"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                        <!--Gender-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="2"
                            android:layout_column="0"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/courier_prime_code"
                            android:padding="3dp"
                            android:text="@string/gender"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/studentGenderEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="2"
                            android:layout_column="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/underline"
                            android:fontFamily="@font/courier_prime_code_italic"
                            android:padding="3dp"
                            android:text="@string/gender_"
                            android:textAlignment="center"
                            android:textColor="@color/purple_700"
                            android:textSize="19sp" />
                    </GridLayout>
                </ScrollView>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>