<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroungmain">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/modifiedicon"
        android:contentDescription="@string/imageview_login_contentDes"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        android:background="@color/white"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/dashboardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_title"
                android:fontFamily="@font/spotlight_typewriting"
                android:textAlignment="center"
                android:letterSpacing="0.1"
                android:textColor="@color/red"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edit"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/email_hint_name"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
               />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:background="@drawable/custom_edit"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:fontFamily="@font/special_elite"
                android:hint="@string/password_hint_name"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/teal_700"
                android:fontFamily="@font/special_elite"
                android:text="@string/login_button_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:cornerRadius="200dp" />

            <TextView
                android:id="@+id/txtVForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:minHeight="48dp"
                android:onClick="forgetPassword"
                android:text="@string/forget" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtVSignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:fontFamily="@font/spotlight_typewriting"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/register_text_prompt"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>